--- a/RecipeView/MainPage.xaml
+++ b/RecipeView/MainPage.xaml
@@ -4,132 +4,55 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
-    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ViewModels="clr-namespace:RecipeView"
-    mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
-    SupportedOrientations="Portrait"  Orientation="Portrait"
+    SupportedOrientations="Portrait" Orientation="Portrait"
+    mc:Ignorable="d"
     shell:SystemTray.IsVisible="True">
-
+    
     <phone:PhoneApplicationPage.Resources>
-
-        <phone:JumpListItemBackgroundConverter x:Key="BackgroundConverter"/>
+        <phone:JumpListItemBackgroundConverter x:Key="BackgroundConverter" Disabled="#FF38477E"/>
         <phone:JumpListItemForegroundConverter x:Key="ForegroundConverter"/>
-
-        <Style x:Key="LongListSelectorJumpListStyle" TargetType="phone:LongListSelector">
-            <Setter Property="GridCellSize"  Value="222,222"/>
-            <Setter Property="LayoutMode" Value="Grid" />
-            <Setter Property="Margin" Value="18,12,0,0"/>
-            <Setter Property="ItemTemplate">
-                <Setter.Value>
-                    <DataTemplate>
-                        <Border Background="{Binding Converter={StaticResource BackgroundConverter}}" Margin="6" >
-                            <TextBlock Text="{Binding Key}" 
-                                           FontFamily="{StaticResource PhoneFontFamilySemiBold}"
-                                           FontSize="36" Padding="11,0,0,0"
-                                           Foreground="{Binding Converter={StaticResource ForegroundConverter}}" VerticalAlignment="Bottom" />
-                        </Border>
-                    </DataTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <DataTemplate x:Key="LongListSelectorGroupHeaderTemplate">
-            <Border Background="Transparent" Padding="5">
-                <Border Background="{StaticResource PhoneAccentBrush}" BorderBrush="{StaticResource PhoneAccentBrush}" BorderThickness="2"	
-                                       Width="auto" Height="62"  				 
-                                        HorizontalAlignment="Left"
-                        Margin="8">
-                    <TextBlock Text="{Binding Key}" 
-                                               
-                                               Foreground="{StaticResource PhoneForegroundBrush}" 
-                                               FontSize="48"
-                                               Padding="6"
-                                               FontFamily="{StaticResource PhoneFontFamilySemiLight}"
-                                               HorizontalAlignment="Left"
-                                               VerticalAlignment="Center"/>
-                </Border>
-            </Border>
-        </DataTemplate>
-
-        <DataTemplate x:Key="LongListSelectorItemTemplate" >
-            <StackPanel Orientation="Vertical" Margin="4,4">
-                <Grid  Margin="4,4" >
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="auto" />
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Text="{Binding Name}" Grid.Column="0" Style="{StaticResource PhoneTextLargeStyle}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="8"/>
-                    <TextBlock Text="{Binding Quantity}" Grid.Column="1" Style="{StaticResource PhoneTextSubtleStyle}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="8"/>
-                    <TextBlock Text="{Binding Units}" Grid.Column="2" Style="{StaticResource PhoneTextAccentStyle}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="8"/>
-                </Grid>
-            </StackPanel>
-        </DataTemplate>
-
     </phone:PhoneApplicationPage.Resources>
-
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent"
-          d:DataContext="{d:DesignInstance Type=ViewModels:MainViewModel, IsDesignTimeCreatable=True}">
+    <Grid x:Name="LayoutRoot" Background="Transparent">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-        <!--Pivot Control-->
-        <phone:Pivot Title="Start cooking!" Loaded="Pivot_Loaded">
-            <!--Pivot item one-->
-            <phone:PivotItem Header="Summary">
-                <StackPanel Margin = "0,0,0,17">
-                    <Grid>
-                        <Image Source="Images/StirFryPic.jpg" Stretch ="UniformToFill" Height="174" Margin="0,10,10,0" VerticalAlignment="Top" HorizontalAlignment="Center"/>
-                        <TextBlock Text="Chicken StirFry" Margin="0,118,10,0" Padding="12" TextAlignment="Right" FontSize="36"/>
-                    </Grid>
-                    <TextBox TextWrapping="Wrap" Text="Ratings go here"/>
-                    <TextBox Height="72" TextWrapping="Wrap" Text="% match to my fridge."/>
-                    <TextBlock TextWrapping="Wrap" Text="Description. Delicious chicken and veggies very quick to make. Invented in 1450 this dish has stuck around for a good reason."/>
-                    <TextBox Height="72" TextWrapping="Wrap" Text="Prep time: 20min"/>
+        <!--TitlePanel contains the name of the application and page title-->
+        <StackPanel Grid.Row="0" Margin="12,17,0,28">
+            <TextBlock Text="Foodstorm" Style="{StaticResource PhoneTextNormalStyle}"/>
+            <TextBlock Text="Let's cook." Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+        </StackPanel>
 
-                </StackPanel>
-            </phone:PivotItem>
+        <!--ContentPanel - place additional content here-->
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Border Background="{Binding Converter={StaticResource BackgroundConverter}}" Margin="6" >
+                <TextBlock Text="{Binding Text}" 
+                                           FontFamily="{StaticResource PhoneFontFamilySemiBold}"
+                                           FontSize="24" Padding="11,0,0,0"
+                                           Foreground="{Binding Converter={StaticResource ForegroundConverter}}" VerticalAlignment="Stretch" TextWrapping="Wrap"/>
+            </Border>
+            <Image Source="Images/Barcode.png" Stretch ="UniformToFill" Height="174" Margin="0,10,10,0" VerticalAlignment="Top" HorizontalAlignment="Center"/>
 
-            <!--Pivot item two-->
-            <phone:PivotItem Header="Ingredients">
-                <phone:LongListSelector Name="ingLongListSelector"   
-                         ItemsSource="{Binding SortedBatch}"
-                         JumpListStyle="{StaticResource LongListSelectorJumpListStyle}"  
-                         GroupHeaderTemplate="{StaticResource LongListSelectorGroupHeaderTemplate}"
-                         ItemTemplate="{StaticResource LongListSelectorItemTemplate}"
-                         HideEmptyGroups ="true" IsGroupingEnabled ="true" LayoutMode="List">
-                </phone:LongListSelector>
-            </phone:PivotItem>
-
-            <!--Pivot item three-->
-            <phone:PivotItem Header="Ingredients" >
-                <toolkit:ExpanderView x:Name="expander">
-                    <toolkit:ExpanderView.Header>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock FontWeight="Bold" Margin="4">Click here to expand</TextBlock>
-                            <Border Background="{StaticResource PhoneAccentBrush}" BorderBrush="{StaticResource PhoneAccentBrush}" BorderThickness="2"	
-                                       Width="auto" Height="62"  				 
-                                        HorizontalAlignment="Left">
-                                <Image Source="Images/knife16.png" Margin="0,10,10,0"/>
-                            </Border>
-                        </StackPanel>
-                    </toolkit:ExpanderView.Header>
-                    
-                </toolkit:ExpanderView>
-            </phone:PivotItem>
-        </phone:Pivot>
-
-        <!--Uncomment to see an alignment grid to help ensure your controls are
-            aligned on common boundaries.  The image has a top margin of -32px to
-            account for the System Tray. Set this to 0 (or remove the margin altogether)
-            if the System Tray is hidden.
-
-            Before shipping remove this XAML and the image itself.-->
+        </Grid> 
+        <!--Before shipping remove this XAML and the image itself.-->
         <!--<Image Source="/Assets/AlignmentGrid.png" VerticalAlignment="Top" Height="800" Width="480" Margin="0,-32,0,0" Grid.Row="0" IsHitTestVisible="False" />-->
     </Grid>
+
+
 
 </phone:PhoneApplicationPage>
